--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,11 +1,3 @@
-/*
-
-    duda, 
-    pra tirar o pontinho do layout só apagar ou apenas comentar o código
-    que está no fim desse arquivo
-
-
-*/
 
 .container {
     background-color: white;
@@ -19,13 +11,22 @@ aside {
 aside .lista-paginas {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
-
     list-style: none;
     padding: 0;
     margin-top: 1em;
     height: 50%;
 }
+
+aside .lista-paginas li {
+    text-align: center;
+    padding: 1rem 0;
+    margin: 2rem 0;
+}
+
+.lista-paginas li:hover {
+    box-shadow: 2px 0px 5px -2px rgba(0, 0, 0, .2);
+}
+
 
 main section {
     min-height: 80vh;
@@ -34,6 +35,7 @@ main section {
 
 section .titulo-section {
     margin: .5em 0 1em 0;
+    text-align: center;
 }
 
 section .card {
@@ -47,11 +49,66 @@ section p {
     margin: 1.4em 0;
 }
 
-footer {
+section .fonte {
+    font-size: .7rem;
+}
+
+section footer {
     box-shadow: -2px -2px 5px -2px rgba(0, 0, 0, .1);
     margin-top: 1em;
-    height: 10vh;
+    min-height: 10vh;
 }
+
+
+footer .socials {
+    margin: 1.5rem 0 1rem;
+    padding: 1em 0;
+}
+
+footer .socials span {
+    margin-right: 1em;
+}
+
+footer .socials a {
+    display: inline-block;
+    color: #29292967;
+    border: 1px solid #29292967;
+    margin-right: 5px;
+    padding: 0 8px;
+    text-align: center;
+    font-size: 1.3rem;
+    border-radius: 5px;
+    transition: .3s;
+}
+
+.copy-alunos {
+    font-size: .7rem;
+    margin-bottom: .2em;
+}
+
+#icon-facebook:hover {
+    color: #036CE4;
+    border: 1px solid #036CE4;
+}
+
+#icon-instagram:hover {
+    color: #dc2743;
+    border: 1px solid #dc2743;
+}
+
+#icon-twitter:hover {
+    color: #1A91DA;
+    border: 1px solid #1A91DA;
+}
+
+#icon-youtube:hover {
+    color: #FF0000;
+    border: 1px solid #FF0000;
+}
+
+
+
+
 
 @media (max-width: 767px) {
     header {
@@ -60,32 +117,21 @@ footer {
         justify-content: center;
         align-items: center;
     }
-
     header .logo {
         display: block;
     }
-
     aside .lista-paginas {
         flex-direction: row;
+        justify-content: space-around;
+    }
+    aside .lista-paginas li {
+        margin: 0;
+        flex: 1;
     }
 
-    aside .lista-paginas li {
-        margin-right: 1em;
-    }
 
     main .abas-principais {
         flex-direction: column;
     }
 }
 
-
-
-
-/*  REMOVE O PONTOS DO LAYOUT */
-/* .my-r {
-    border: 1px dotted green;
-}
-
-.my-c {
-    border: 1px dotted purple;
-} */
